--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@supabase/supabase-js": "^2.98.0",
     "axios": "^1.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
